# Enigma

./: LICENSE  enigma.mdj
codes cryptanalyse/: Ruy_Blas.txt  chiffrement.py  frequence_angl.txt  indice_de_coincidence.py  tests.py  texte_chiffre.txt  un_art.txt
codes cryptanalyse/solution polonaise/: probleme_2b.py
enigma-base_favilities/: .gitignore  CMakeLists.txt  README.md  rapport.md
enigma-base_favilities/codes cryptanalyse/: cifertext_only_sinkov.py  frequence_fr.txt  indice_de_coincidence_thread.py
enigma-base_favilities/codes cryptanalyse/simulation enigma python/: machine.py
enigma-base_favilities/codes cryptanalyse/solution polonaise/: infos_publiques.py  probleme_2a.py
enigma-base_favilities/src/: application.hpp  test_catch.cpp
enigma-base_favilities/src/machine/: enigma.cpp  letter.cpp
enigma-base_favilities/src/machine/components/: reflector.hpp  rotor.cpp  rotor.hpp  scrambler.cpp
enigma-base_favilities/tests/: showdown  try.txt
src/: application.cpp  main.cpp
src/machine/: enigma.hpp  letter.hpp
src/machine/components/: plugboard.hpp  reflector.cpp  scrambler.hpp
tests/: try2.txt
